- Added links API
__Remark:__
User login tests need to be fixes
