# eocdb/ws/res/openapi.yml
@@ -3,7 +3,7 @@ servers:
   - url: 'http://ocdb-test:4000/eocdb/api/v0.1.0/'
 info:
   title: eocdb-server
-  version: "0.1.0-dev.20"
+  version: "0.1.0-dev.21"
   description: |
     RESTful API for the EUMETSAT Ocean Colour In-Situ Database.
     How we utilise HTTP methods:
@@ -744,6 +744,21 @@ paths:
       security:
         - eocdb_auth:
           - 'read:datasets'
+  '/links':
+    post:
+      tags:
+        - Links
+      summary: Saving links for Links Page
+      description: Saving links for Links Page
+      operationId: saveLinks
+      requestBody:
+        $ref: '#/components/requestBodies/Links'
+      responses:
+        '200':
+          description: Successful operation.
+        '400':
+          description: Invalid call
+
   '/users':
     post:
       tags:
@@ -1299,6 +1314,11 @@ components:
          id:
            type: integer
            format: int64
+    Links:
+      type: object
+      required:
+        content:
+          type: string
     Dataset:
       type: object
       required:
@@ -1408,6 +1428,13 @@ components:
           application/json:
             schema:
               $ref: '#/components/schemas/UserId'
+    Links:
+      description: Links object.
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Links'
     FileUpload:
       description: 'File upload.'
       required: true
